# trx

./: AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh  justfile  release.toml
.trx/: config.toml  issues.jsonl
crates/trx-api/: Cargo.toml
crates/trx-api/src/: main.rs
crates/trx-cli/: Cargo.toml
crates/trx-cli/src/: commands.rs  main.rs
crates/trx-core/: Cargo.toml
crates/trx-core/src/: config.rs  crdt_store.rs  error.rs  graph.rs  id.rs  issue.rs  lib.rs  service.rs  store.rs  unified_store.rs
crates/trx-mcp/: Cargo.toml
crates/trx-mcp/src/: main.rs
crates/trx-tui/: Cargo.toml
crates/trx-tui/src/: main.rs
examples/: config.schema.json  config.toml
