[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["byteowlz"]
license = "MIT"
repository = "https://github.com/byteowlz/trx"
description = "Minimal git-backed issue tracker with TUI viewer"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1.43", features = ["full"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
base32 = "0.5"
sha2 = "0.10"
dirs = "6.0"
thiserror = "2.0"
anyhow = "1.0"
colored = "3.0"
tabled = "0.17"

# Graph analysis (for viewer)
petgraph = "0.7"
