[package]
name = "trx-tui"
version.workspace = true
edition.workspace = true
description = "TUI viewer for trx issue tracker"

[[bin]]
name = "trx-tui"
path = "src/main.rs"

[dependencies]
trx-core = { path = "../trx-core" }
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
